# CalendarEvents

./: manage.py  pyproject.toml  requirements.txt
GoogleCalendar/: urls.py  views.py
GoogleCalendar/static/: style.css
static/: style.css
templates/: events.html
website/: middleware.py  settings.py  urls.py  wsgi.py
